# a2m

./: CMakeLists.txt  COPYING  README.md
scripts/: generate_test_data.py
src/: CMakeLists.txt
src/a2m/: CMakeLists.txt  converter.cc  converter.h  notes.cc  notes.h
src/cli/: CMakeLists.txt  main.cc
src/lib/: CMakeLists.txt
src/lib/a2m/: CMakeLists.txt  converter.cc  converter.h  notes.cc  notes.h
src/njones/: CMakeLists.txt
src/njones/a2m/: CMakeLists.txt  converter.cc  converter.h  notes.cc  notes.h
src/njones/lib/: CMakeLists.txt  ring_buffer.h  udp_logger.cc  udp_logger.h
test/: CMakeLists.txt  test.h
test/data/: stereo.h
